# sf-keyaudit

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  action.yml  build.rs  features.md  sf-keyaudit-build-spec.docx
.github/workflows/: audit.yml  ci.yml  release.yml
coverage/: tarpaulin-report.html
docs/: README.md  allowlist.md  architecture.md  artifact-hardening.md  baseline.md  benchmarks.md  ci-integration.md  cli-reference.md  config.md  detector-matrix.md  entropy-confidence.md  executive-overview.md  exit-codes.md  getting-started.md  ignore-files.md  output-formats.md  platform-maturity-roadmap.md  providers.md  release-checklist.md
src/: allowlist.rs  audit.rs  baseline.rs  cache.rs  cli.rs  config.rs  entropy.rs  error.rs  fingerprint.rs  git.rs  main.rs  ownership.rs  patterns.rs  policy.rs  scanner.rs  telemetry.rs  triage.rs  types.rs  verify.rs  walker.rs
src/output/: json.rs  mod.rs  sarif.rs  text.rs
tests/: integration_tests.rs  property_tests.proptest-regressions  property_tests.rs
