[package]
name = "sf-keyaudit"
version = "1.0.0"
edition = "2021"
rust-version = "1.75.0"
description = "Scans codebases for exposed AI API keys across all major providers"
license = "MIT"
repository = "https://github.com/veerarag1973/sf-keyaudit"
keywords = ["security", "api-keys", "ai", "secrets", "audit"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "coverage/**",
    "sf-keyaudit-build-spec.docx",
    ".gitattributes",
    "tests/**",
]

[[bin]]
name = "sf-keyaudit"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
fancy-regex = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rayon = "1"
walkdir = "2"
ignore = "0.4"
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
