[package]
name = "sf-keyaudit"
version = "2.1.0"
edition = "2021"
rust-version = "1.75.0"
description = "Scans codebases for exposed AI API keys across all major providers"
license = "MIT"
repository = "https://github.com/veerarag1973/sf-keyaudit"
keywords = ["security", "api-keys", "ai", "secrets", "audit"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "coverage/**",
    "sf-keyaudit-build-spec.docx",
    ".gitattributes",
    "tests/**",
]

[[bin]]
name = "sf-keyaudit"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
fancy-regex = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rayon = "1"
walkdir = "2"
ignore = "0.4"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "0.32"
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["trace"] }
opentelemetry-otlp = { version = "0.31", features = ["trace", "http-proto", "reqwest-blocking-client"] }
sha2 = "0.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip = "2"
flate2 = "1"
tar = "0.4"
indexmap = "2"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
proptest = "1"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
